fix styling; add scrollbar and hide from unauthenticated users

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .scrollbar-sm::-webkit-scrollbar {
+        width: 4px;
+        border-radius: 24px;
+    }
+    .scrollbar-rounded::-webkit-scrollbar-thumb {
+        border-radius: 24px;
+    }
+}
+
 @layer components {
     .buttonText::after {
         display: block;
